@@ -1,3 +1,4 @@
+15-september-2009 - FatRatKnight - Reworked how input is taken from lua, and generally everything related to joypad.set and what it affects. Now setting stuff to false will: Prevent user control for exactly one frame, and allow more than one false button as a time. Yeah, bug fixes. Hopefully runs a little faster now.
 22-august-2009 - adelikat - Win32 - Map Hotkeys Dialog - Fixed but where "X" and Alt+F4 would not close dialog
 22-august-2009 - adelikat - Win32 - Added a Save Config File menu item
 12-august-2009 - adelikat - Win32 - Added a menu item to toggle to New PPU
